# algorithmic-trading

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  verify_phase4.py
docs/: stock_analysis_api_flow.md  stock_recommendation_process.md
src/etf_trend/: __init__.py
src/etf_trend/allocator/: __init__.py  core.py  optimizer.py
src/etf_trend/analysis/: __init__.py  attribution.py  llm_analyst.py
src/etf_trend/api/: __init__.py  main.py
src/etf_trend/backtest/: costs.py  engine.py  metrics.py  plots.py  simulator.py
src/etf_trend/config/: settings.py
src/etf_trend/configs/: default.yaml
src/etf_trend/data/: align.py  cache.py  calendar.py  quality.py
src/etf_trend/domain/: bar.py
src/etf_trend/execution/: __init__.py  executor.py
src/etf_trend/features/: indicators.py  momentum.py  pattern_match.py  trend_filter.py  trend_pred.py  volatility.py
src/etf_trend/ml/: features.py  model.py
src/etf_trend/portfolio/: constraints.py  rebalance.py  weighting.py
src/etf_trend/regime/: __init__.py  engine.py
src/etf_trend/report/: pdf.py  summary.py
src/etf_trend/scripts/: daily_signal.py  export_report.py  run_backtest.py  stock_picks.py  test_yf_fundamentals.py  weekly_report.py
src/etf_trend/selector/: __init__.py  satellite.py
src/etf_trend/tests/: test_ai_features.py  test_allocator.py  test_api_integration.py  test_backtest.py  test_execution.py  test_fundamentals.py  test_indicators.py  (+8 more)
tests/: test_backtest_engine.py  test_constraints.py  test_institutional.py  test_momentum.py  test_rebalance.py  test_volatility.py
(+9 files in other folders)
